tests/errors/module_redeclaration.tau
module a{}
module a{}
func main(){}
